--- a/test-output/index.html
+++ b/test-output/index.html
@@ -107,12 +107,12 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-eNetBanking" title="com.eNetBanking.testCases.LoginScenario.TC_LoginTest_001" hash-for-method="VerifyLoginTest">VerifyLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-eNetBanking" title="com.eNetBanking.testCases.LoginScenario.TC_LoginTest_004" hash-for-method="VerifyLoginTest">VerifyLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-eNetBanking" title="com.eNetBanking.testCases.LoginScenario.TC_LoginTest_004" hash-for-method="VerifyLoginTest">VerifyLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-eNetBanking" title="com.eNetBanking.testCases.LoginScenario.TC_LoginTest_001" hash-for-method="VerifyLoginTest">VerifyLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -135,16 +135,14 @@
           <div class="suite-eNetBanking-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.eNetBanking.testCases.LoginScenario.TC_LoginTest_003</span>
+              <span class="class-name">com.eNetBanking.testCases.LoginScenario.TC_LoginTest_001</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestLoginFailedWithoutUserId">
-                  </a> <!-- TestLoginFailedWithoutUserId -->
-                  <span class="method-name">TestLoginFailedWithoutUserId</span>
-                  <em>
-(Verify an error message when user id not enter  in login window.)                  </em>
+                  <a name="VerifyLoginTest">
+                  </a> <!-- VerifyLoginTest -->
+                  <span class="method-name">VerifyLoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -167,14 +165,16 @@
           <div class="suite-eNetBanking-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.eNetBanking.testCases.LoginScenario.TC_LoginTest_001</span>
+              <span class="class-name">com.eNetBanking.testCases.LoginScenario.TC_LoginTest_003</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyLoginTest">
-                  </a> <!-- VerifyLoginTest -->
-                  <span class="method-name">VerifyLoginTest</span>
+                  <a name="TestLoginFailedWithoutUserId">
+                  </a> <!-- TestLoginFailedWithoutUserId -->
+                  <span class="method-name">TestLoginFailedWithoutUserId</span>
+                  <em>
+(Verify an error message when user id not enter  in login window.)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -203,11 +203,11 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; verbose=&quot;0&quot; name=&quot;eNetBanking&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;eNetBanking&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.eNetBanking.utilites.Reporting&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; verbose=&quot;0&quot; name=&quot;SauceLab Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;SauceLab Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.eNetBanking.testCases.LoginScenario.TC_LoginTest_001&quot;/&gt;
@@ -257,24 +257,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'com.eNetBanking.testCases.LoginScenario.TC_LoginTest_002')
-data.setCell(0, 3, 83508);
+data.setCell(0, 3, 15770);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'VerifyLoginTest')
-data.setCell(1, 2, 'com.eNetBanking.testCases.LoginScenario.TC_LoginTest_001')
-data.setCell(1, 3, 72404);
+data.setCell(1, 2, 'com.eNetBanking.testCases.LoginScenario.TC_LoginTest_004')
+data.setCell(1, 3, 10991);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'VerifyLoginTest')
-data.setCell(2, 2, 'com.eNetBanking.testCases.LoginScenario.TC_LoginTest_004')
-data.setCell(2, 3, 18482);
+data.setCell(2, 1, 'TestLoginFailedWithoutUserId')
+data.setCell(2, 2, 'com.eNetBanking.testCases.LoginScenario.TC_LoginTest_003')
+data.setCell(2, 3, 5455);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'TestLoginFailedWithoutUserId')
-data.setCell(3, 2, 'com.eNetBanking.testCases.LoginScenario.TC_LoginTest_003')
-data.setCell(3, 3, 5163);
+data.setCell(3, 1, 'VerifyLoginTest')
+data.setCell(3, 2, 'com.eNetBanking.testCases.LoginScenario.TC_LoginTest_001')
+data.setCell(3, 3, 4357);
 window.suiteTableData['eNetBanking']= { tableData: data, tableDiv: 'times-div-eNetBanking'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 36 seconds</span>
               <div id="times-div-eNetBanking">
               </div> <!-- times-div-eNetBanking -->
             </div> <!-- times-div -->
@@ -307,56 +307,56 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">VerifyLoginTest</span>
-                <span class="method-start">12167 ms</span>
+                <span class="method-start">8511 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">84578 ms</span>
+                <span class="method-start">12894 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.eNetBanking.testCases.LoginScenario.TC_LoginTest_002</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp(chrome)</span>
-                <span class="method-start">85201 ms</span>
+                <span class="method-start">13713 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">loginTest</span>
-                <span class="method-start">94701 ms</span>
+                <span class="method-start">21018 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">178210 ms</span>
+                <span class="method-start">36788 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.eNetBanking.testCases.LoginScenario.TC_LoginTest_003</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp(chrome)</span>
-                <span class="method-start">178859 ms</span>
+                <span class="method-start">37557 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">TestLoginFailedWithoutUserId</span>
-                <span class="method-start">185700 ms</span>
+                <span class="method-start">45257 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">190863 ms</span>
+                <span class="method-start">50712 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.eNetBanking.testCases.LoginScenario.TC_LoginTest_004</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp(chrome)</span>
-                <span class="method-start">191462 ms</span>
+                <span class="method-start">51497 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">VerifyLoginTest</span>
-                <span class="method-start">199640 ms</span>
+                <span class="method-start">59487 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">218122 ms</span>
+                <span class="method-start">70480 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
